# backend/controllers/validate_location.go
@@ -1,3 +1,6 @@
+//TODO
+// employer and the other models are updated
+
 package controllers
 
 import (
